
cmake_minimum_required(VERSION 3.18)
project(BabylonNative.vscode)

add_subdirectory("BabylonNative")

set_property(TARGET Playground PROPERTY XCODE_ATTRIBUTE_PRODUCT_BUNDLE_IDENTIFIER "${BABYLON_NATIVE_PLAYGROUND_IOS_PRODUCT_BUNDLE_IDENTIFIER}")
set_property(TARGET ValidationTests PROPERTY XCODE_ATTRIBUTE_PRODUCT_BUNDLE_IDENTIFIER "${BABYLON_NATIVE_VALIDATION_TESTS_IOS_PRODUCT_BUNDLE_IDENTIFIER}")
